♿️ Stop search text from clipping
This commit will remove the hidden overflow on the search contraints on
the catalog search page when doing a faceted search.

Ref:
- https://github.com/scientist-softserv/archives_online/issues/80

--- a/app/assets/stylesheets/overrides_with_rivet_styles.scss
+++ b/app/assets/stylesheets/overrides_with_rivet_styles.scss
@@ -289,6 +289,12 @@ a {
 
 // SEARCH RESULTS PAGE
 .blacklight-catalog-index {
+  .applied-filter .constraint-value {
+    max-width: 100%;
+    overflow: unset;
+    white-space: normal;
+  }
+
   .btn-primary {
     @extend .rvt-button;
   }
